--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "BROWSER='none' react-scripts start",
+    "start": "cross-env BROWSER='none' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.2"
   }
 }
