--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://mbecker20.github.io/space-machine",
   "name": "space-machine",
   "version": "0.1.0",
   "private": true,
@@ -25,6 +26,8 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "cross-env BROWSER='none' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -47,6 +50,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
+    "gh-pages": "^3.1.0",
     "redux-devtools": "^3.5.0"
   }
 }
