--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
     "@types/redux-logger": "^3.0.8",
+    "@types/rethinkdb": "^2.3.16",
     "react": "^16.13.1",
     "react-archer": "^2.0.2",
     "react-dom": "^16.13.1",
@@ -24,6 +25,7 @@
     "react-spring": "^8.0.27",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
+    "rethinkdb": "^2.4.2",
     "typescript": "~3.7.2"
   },
   "scripts": {
