--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-jss": "^10.3.0",
     "react-redux": "^7.2.0",
+    "react-rethinkdb": "^0.7.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "redux-devtools-extension": "^2.13.8",
