restoring lineinput working

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://mbecker20.github.io/space-machine",
   "name": "space-machine",
   "version": "0.1.0",
   "private": true,
@@ -33,6 +32,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "cross-env BROWSER='none' react-scripts start",
+    "servor": "npx servor ./build index.html 8000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
