--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-archer": "^2.0.2",
     "react-dom": "^16.13.1",
     "react-jss": "^10.3.0",
+    "react-p5": "^1.3.6",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
