--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@babylonjs/core": "^4.1.0",
     "@feathersjs/feathers": "^4.5.8",
     "@feathersjs/rest-client": "^4.5.8",
     "@reach/router": "^1.3.3",
