--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/mathjs": "^6.0.6",
     "@types/node": "^12.12.68",
     "@types/reach__router": "^1.3.6",
     "@types/react": "^16.9.53",
@@ -28,6 +29,7 @@
     "@types/redux-logger": "^3.0.8",
     "@types/rethinkdb": "^2.3.16",
     "@types/wicg-file-system-access": "^2020.9.1",
+    "mathjs": "^7.5.1",
     "react": "^16.14.0",
     "react-archer": "^2.0.2",
     "react-dom": "^16.14.0",
